--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.12",
     "@mdx-js/mdx": "^1.0.21",
     "@mdx-js/react": "^1.0.21",
     "gatsby-mdx": "^0.6.3",
+    "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-page-creator": "^2.0.13",
-    "gatsby-source-contentful": "^2.0.72"
+    "gatsby-plugin-theme-ui": "^0.1.3",
+    "gatsby-source-contentful": "^2.0.72",
+    "theme-ui": "^0.1.5"
   }
 }
