--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-page-creator": "^2.0.13",
     "gatsby-plugin-theme-ui": "^0.1.3",
+    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-contentful": "^2.0.72",
-    "theme-ui": "^0.1.5"
+    "lodash.merge": "^4.6.1",
+    "react-typography": "^0.16.19",
+    "theme-ui": "^0.1.5",
+    "theme-ui-typography": "^0.1.3",
+    "typography": "^0.16.19"
   }
 }
