--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-theme-ui": "^0.1.3",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-contentful": "^2.0.72",
+    "gatsby-transformer-remark": "^2.5.0",
     "lodash.merge": "^4.6.1",
     "react-typography": "^0.16.19",
     "theme-ui": "^0.1.5",
