--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-page-creator": "^2.0.13",
+    "gatsby-plugin-snipcart": "^1.0.6",
     "gatsby-plugin-theme-ui": "^0.1.3",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-contentful": "^2.0.72",
