--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-contentful": "^2.0.72",
     "gatsby-transformer-remark": "^2.5.0",
+    "lodash": "^4.17.11",
     "lodash.merge": "^4.6.1",
     "react-typography": "^0.16.19",
     "theme-ui": "^0.1.5",
