--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-page-creator": "^2.0.13",
+    "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-snipcart": "^1.0.6",
     "gatsby-plugin-theme-ui": "^0.1.3",
     "gatsby-plugin-typography": "^2.2.13",
@@ -25,6 +26,8 @@
     "gatsby-transformer-remark": "^2.5.0",
     "lodash": "^4.17.11",
     "lodash.merge": "^4.6.1",
+    "react-helmet": "^5.2.1",
+    "react-structured-data": "^0.0.14",
     "react-typography": "^0.16.19",
     "theme-ui": "^0.1.5",
     "theme-ui-typography": "^0.1.3",
