--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "react-dom": "^16.8.6"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.10",
+    "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.12",
     "@mdx-js/mdx": "^1.0.21",
     "@mdx-js/react": "^1.0.21",
+    "@theme-ui/presets": "^0.2.10",
     "gatsby-image": "^2.1.4",
     "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-page-creator": "^2.0.13",
     "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-snipcart": "^1.0.6",
-    "gatsby-plugin-theme-ui": "^0.1.3",
+    "gatsby-plugin-theme-ui": "^0.2.6",
     "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-contentful": "^2.0.72",
     "gatsby-transformer-remark": "^2.5.0",
@@ -29,7 +30,7 @@
     "react-helmet": "^5.2.1",
     "react-structured-data": "^0.0.14",
     "react-typography": "^0.16.19",
-    "theme-ui": "^0.1.5",
+    "theme-ui": "^0.2.10",
     "theme-ui-typography": "^0.1.3",
     "typography": "^0.16.19"
   }
